welcome.lessons.welcome.bat.bool2.AlarmClock.scala.error
alarmClock:3: error: ')' expected but '<-' found.
		if (day <- 1 to 5){
                        ^alarmClock:7: error: illegal start of simple expression
	}
        ^alarmClock:9: error: ')' expected but '<-' found.
		if (day<- 1 to 5){
                       ^alarmClock:13: error: illegal start of simple expression
	}
        ^